updated works & testimonial section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <img class="img-fluid" src="img/img_3.jpg">
             </a>
           </div>
-          <div class="item web design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>E-commerce website</h3>
@@ -159,13 +159,13 @@
               </video>
             </a>
           </div>
-          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="https://www.iconnecttechnologies.com" target="_blank" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Logo</h3>
-                <span>Branding</span>
+                <h3>Technology</h3>
+                <span>Web</span>
               </div>
-              <img class="img-fluid" src="img/img_7.jpg">
+              <img class="img-fluid" src="img/img_9.png">
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -187,6 +187,33 @@
                 <span>Branding / Marketing</span>
               </div>
               <img class="img-fluid" src="img/img_8.jpg">
+            </a>
+          </div>
+          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Brochure</h3>
+                <span>Branding / Design</span>
+              </div>
+              <img class="img-fluid" src="img/img_12.png">
+            </a>
+          </div>
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="http://www.harmalert.com/" target="_blank" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Healthcare</h3>
+                <span>Web</span>
+              </div>
+              <img class="img-fluid" src="img/img_10.png">
+            </a>
+          </div>
+          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Logo</h3>
+                <span>Branding / Design</span>
+              </div>
+              <img class="img-fluid" src="img/img_7.jpg">
             </a>
           </div>
         </div>
@@ -269,9 +296,13 @@
             <div class="testimonial">
               <img src="img/person_1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
+                <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
+                  quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
+                  able to interpret even the most complex instructions. I feel confident that she is capable of handling any task/project with thoughtfullness
+                  and maturity.
+                </p>
               </blockquote>
-              <p>&mdash; Jean Hicks</p>
+              <p>&mdash; Jez Rel P. - CEO, FilipinoVASuccess Academy</p>
             </div>
           </div>
 
