--- a/services.html
+++ b/services.html
@@ -139,9 +139,12 @@
               <div class="testimonial">
                 <img src="img/person_1.jpg" alt="Image" class="img-fluid">
                 <blockquote>
-                  <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
+                  <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
+                    quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
+                    able to interpret even the most complex instructions. I feel confident that she is capable of handling any task/project with thoughtfullness
+                    and maturity./p>
                 </blockquote>
-                <p>&mdash; Jean Hicks</p>
+                <p>&mdash; Jez Rel P. - CEO, FilipinoVASuccess Academy</p>
               </div>
             </div>
 
