--- a/works.html
+++ b/works.html
@@ -89,8 +89,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-5 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Works</h2>
-            <p class="mb-0">Here's a selection of some recent work</p>
+            <h2>Joan Regudo</h2>
+            <p class="mb-0">Web Developer &amp; Graphics Designer</p>
           </div>
           <div class="col-md-12 col-lg-7 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -131,7 +131,7 @@
               <img class="img-fluid" src="img/img_3.jpg">
             </a>
           </div>
-          <div class="item web design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>E-commerce website</h3>
@@ -161,13 +161,13 @@
               </video>
             </a>
           </div>
-          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="https://www.iconnecttechnologies.com" target="_blank" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Logo</h3>
-                <span>Branding</span>
+                <h3>Technology</h3>
+                <span>Web</span>
               </div>
-              <img class="img-fluid" src="img/img_7.jpg">
+              <img class="img-fluid" src="img/img_9.png">
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -176,7 +176,7 @@
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
               </div>
-              <video width="490" height="490" poster="img/img_1.jpg" controls class="img-fluid">
+              <video width="490" height="490" controls class="img-fluid">
                 <source src="video/bayanihan.mp4" type="video/mp4">
                   Your browser does not support the video tag.
               </video>
@@ -189,6 +189,33 @@
                 <span>Branding / Marketing</span>
               </div>
               <img class="img-fluid" src="img/img_8.jpg">
+            </a>
+          </div>
+          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Brochure</h3>
+                <span>Branding / Design</span>
+              </div>
+              <img class="img-fluid" src="img/img_12.png">
+            </a>
+          </div>
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="http://www.harmalert.com/" target="_blank" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Healthcare</h3>
+                <span>Web</span>
+              </div>
+              <img class="img-fluid" src="img/img_10.png">
+            </a>
+          </div>
+          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Logo</h3>
+                <span>Branding / Design</span>
+              </div>
+              <img class="img-fluid" src="img/img_7.jpg">
             </a>
           </div>
         </div>
@@ -205,9 +232,12 @@
             <div class="testimonial">
               <img src="img/person_1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
+                <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
+                  quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
+                  able to interpret even the most complex instructions. I feel confident that she is capable of handling any task/project with thoughtfullness
+                  and maturity.</p>
               </blockquote>
-              <p>&mdash; Jean Hicks</p>
+              <p>&mdash; Jez Rel P. - CEO, FilipinoVASuccess Academy</p>
             </div>
           </div>
 
