--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@
             <div class="testimonial">
               <img src="img/person_1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
+                <p>She is exceptionally responsive to her duties and able to interpret even the most complex instructions.
+                  I feel confident that she is capable of handling any task/project with thoughtfullness and maturity.Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
                   quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
                   able to interpret even the most complex instructions. I feel confident that she is capable of handling any task/project with thoughtfullness
-                  and maturity.
+                  and maturity
                 </p>
               </blockquote>
               <p>&mdash; Jez Rel P. - CEO, FilipinoVASuccess Academy</p>
