--- a/services.html
+++ b/services.html
@@ -137,7 +137,7 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/jez.jpg" alt="Image" class="img-fluid">
+                <img src="img/person1.jpg" alt="Image" class="img-fluid">
                 <blockquote>
                   <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
                     quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
@@ -150,7 +150,7 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/novie.png" alt="Image" class="img-fluid">
+                <img src="img/person2.png" alt="Image" class="img-fluid">
                 <blockquote>
                   <p>Joan had an incredible job, she shared great ideas for my real estate brochure. 
                     I highly recommend her to anyone looking for a graphic designer! 5 stars for Joan!</p>
@@ -161,7 +161,7 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/jonas.jpg" alt="Image" class="img-fluid">
+                <img src="img/person3.jpg" alt="Image" class="img-fluid">
                 <blockquote>
                   <p>Thank you for the design for my calling card. I really love it, very professional and most of all very attractive. I'm very much happy to have this. Because of your amazing hand work, it helps me more to get a client. 
                     I'm very satisfied with your work and I will recommend you to all my friends especially in the business industry.</p>
@@ -172,7 +172,7 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/christine.jpg" alt="Image" class="img-fluid">
+                <img src="img/person4.jpg" alt="Image" class="img-fluid">
                 <blockquote>
                   <p>I highly recommend Ms Joan for doing an amazing and creative design for our team. We were very precise about the details and she did a good job in producing what we exactly want and need. 
                     We were all so pleased with the design concept and we want to see more of what she has to offer. </p>
