--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h3>Let's Make Something Great Together!</h3>
           <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
             <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
-            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:va.joanregudo@gmail.com">va.joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -287,21 +287,19 @@
       </div>
     </div>
 
-    <div class="site-section pt-0">
+    <div class="site-section pb-0">
       <div class="container">
 
         <div class="owl-carousel testimonial-carousel">
 
           <div class="testimonial-wrap">
             <div class="testimonial">
-              <img src="img/person_1.jpg" alt="Image" class="img-fluid">
+              <img src="img/person1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>She is exceptionally responsive to her duties and able to interpret even the most complex instructions.
-                  I feel confident that she is capable of handling any task/project with thoughtfullness and maturity.Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
+                <p>Joan is very passionate in whatever she does and she puts her heart out in every task that's assigned to her. She not only delivers
                   quality output on time but she always goes above and beyond your expectations. She is exceptionally responsive to her duties and
                   able to interpret even the most complex instructions. I feel confident that she is capable of handling any task/project with thoughtfullness
-                  and maturity
-                </p>
+                  and maturity./p>
               </blockquote>
               <p>&mdash; Jez Rel P. - CEO, FilipinoVASuccess Academy</p>
             </div>
@@ -309,17 +307,41 @@
 
           <div class="testimonial-wrap">
             <div class="testimonial">
-              <img src="img/person_2.jpg" alt="Image" class="img-fluid">
+              <img src="img/person2.png" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Great work! She was responsive and organized. Thanks for the hardwork.</p>
+                <p>Joan had an incredible job, she shared great ideas for my real estate brochure. 
+                  I highly recommend her to anyone looking for a graphic designer! 5 stars for Joan!</p>
               </blockquote>
-              <p>&mdash; Chris Stanworth</p>
+              <p>&mdash; Novie S.V - Realtor, FilipinoHomes</p>
             </div>
           </div>
-        </div>
 
+          <div class="testimonial-wrap">
+            <div class="testimonial">
+              <img src="img/person3.jpg" alt="Image" class="img-fluid">
+              <blockquote>
+                <p>Thank you for the design for my calling card. I really love it, very professional and most of all very attractive. I'm very much happy to have this. Because of your amazing hand work, it helps me more to get a client. 
+                  I'm very satisfied with your work and I will recommend you to all my friends especially in the business industry.</p>
+              </blockquote>
+              <p>&mdash; Jonas C. - Realtor, FilipinoHomes</p>
+            </div>
+          </div>
+
+          <div class="testimonial-wrap">
+            <div class="testimonial">
+              <img src="img/person4.jpg" alt="Image" class="img-fluid">
+              <blockquote>
+                <p>I highly recommend Ms Joan for doing an amazing and creative design for our team. We were very precise about the details and she did a good job in producing what we exactly want and need. 
+                  We were all so pleased with the design concept and we want to see more of what she has to offer. </p>
+              </blockquote>
+              <p>&mdash; Christine B. - Realtor, FilipinoHomes</p>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
+
   </main>
   <footer class="footer" role="contentinfo">
     <div class="container">
