--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           <h3>Let's Make Something Great Together!</h3>
           <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
             <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
-            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:va.joanregudo@gmail.com">va.joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -151,7 +151,7 @@
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>joanregudo@gmail.com</span>
+                <span><a href="mailto:va.joanregudo@gmail.com">va.joanregudo@gmail.com</a></span>
               </li>
             </ul>
           </div>
