removed unnecessary spaces

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Let's Make Something Great Together!</h3>
-          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez St., Cebu City, Philippines, 6000<br>
             <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
             <span class="la la-at la-1x mr-2"></span><a href="mailto:va.joanregudo@gmail.com">va.joanregudo@gmail.com</a></p>
         </div>
@@ -287,7 +287,7 @@
       </div>
     </div>
 
-    <div class="site-section pb-0">
+    <div class="site-section">
       <div class="container">
 
         <div class="owl-carousel testimonial-carousel">
