--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         </div>
         <div class="col-md-4 d-none d-md-block">
           <h3>Let's Make Something Great Together!</h3>
-          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez St., Cebu City, Philippines 6000<br>
             <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
             <span class="la la-at la-1x mr-2"></span><a href="mailto:va.joanregudo@gmail.com">va.joanregudo@gmail.com</a></p>
         </div>
@@ -143,7 +143,7 @@
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>Mahayahay A. Lopez Street Brgy. Calamba, Cebu City, Philippines 6000</span>
+                <span>Mahayahay A. Lopez St. Cebu City, Philippines 6000</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
